# the-clockwork-dark

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  _server.err  _server.out  launcher.py  prompt.md  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-06-21T01-53-21-579Z.yml  page-2026-06-21T01-58-06-563Z.yml
Design_files/: .thumbnail  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
config/: default.yaml
content/: __init__.py
data/: bestiary.yaml  contracts.yaml  economy.yaml  encounters.yaml  set_pieces.yaml
docs/: AUDIT.md  CLAUDE_CODE_BRIEF.md  CLAUDE_DESIGN_BRIEF.md  DESIGN.md  DESIGN_REVIEW.md
engine/: __init__.py  config.py
frontend-tests/: README.md  clockwork-dialogs.test.js  clockwork-helpers.test.js  package-lock.json  package.json  playwright.config.js  vitest.config.mjs
knowledge/: _index.json  changelog.md  index.md  okfs-spec.md
scripts/: build_asset_manifest.py  build_okfs_index.py  extract_bible_lore.py  install_comfyui.ps1  install_voxtral.ps1  seed_lore.py  start.ps1  sync_world_content.py
tests/: conftest.py  test_assistant.py  test_assistant_director.py  test_audit_tighten.py  test_awareness_gate.py  test_cascade.py  test_challenges.py  test_challenges_branches.py  test_clockwork_scene.py  test_clockwork_socket.py  test_combat.py  test_consumed_finale.py  test_contracts.py  test_contracts_guards.py  test_convergence.py  test_crafting.py  test_data_collector.py  test_design_assets.py  test_dice.py  test_doom_clock.py  test_encounters.py  test_evaluator.py  (+38 more)
(+230 files in other folders)
