[project]
name = "clockwork-dark"
version = "0.1.0"
description = "Local-first AI RPG — The Clockwork Dark"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "pytest>=8.0",
    "httpx>=0.27.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]